# transportation-price-analyzer

./: .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 964fdb8cab9a_add_price_alerts_table.py  f767d2c923a9_create_initial_tables.py
backend/prompts/: system.md
backend/prompts/tools/: analyze_price.md  get_price_trend.md  search_flights.md
backend/scripts/: seed_routes.py
backend/src/: config.py  main.py
backend/src/adapters/: amadeus.py  base.py
backend/src/api/: alerts.py  chat.py  dashboard.py  health.py  routes.py  search.py  trends.py
backend/src/cache/: redis_client.py
backend/src/db/: session.py
backend/src/formatters/: price_formatter.py
backend/src/models/: airport.py  price_alert.py  price_snapshot.py  watched_route.py
backend/src/scheduler/: jobs.py
backend/src/schemas/: alerts.py  chat.py  dashboard.py  routes.py  search.py  trends.py
backend/src/services/: alert_service.py  dashboard_service.py  flight_service.py  routes_service.py  snapshot_service.py  trend_service.py
backend/src/tools/: analyze_price.py  get_price_trend.py  search_flights.py
backend/src/workflows/: flight_agent.py
backend/tests/integration/: test_alerts_api.py  test_dashboard_api.py  test_health_api.py  test_routes_api.py  test_search_api.py  test_trends_api.py
backend/tests/unit/: test_adapters_base.py  test_alert_service.py  test_amadeus_adapter.py  test_dashboard_unit.py  test_formatters.py  (+5 more)
(+64 files in other folders)
