[project]
name = "backend"
version = "0.1.0"
description = "Flight Price Analyzer backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "amadeus>=12.0.0",
    "anthropic>=0.109.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx[asyncio]>=0.28.1",
    "psycopg[asyncio,binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Scripts — run via: uv run <script>
# dev:      uvicorn src.main:app --reload --host 0.0.0.0 --port 8000
# lint:     ruff check src && ruff format --check src
# fmt:      ruff format src && ruff check --fix src
# typecheck: mypy src
# test:     pytest
# migrate:  alembic upgrade head
# See Makefile for convenience aliases.
